--- a/sampleApp/sampleApp/Views/AboutPage.xaml
+++ b/sampleApp/sampleApp/Views/AboutPage.xaml
@@ -45,6 +45,8 @@
                         Command="{Binding OpenWebCommand}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
+                <Button x:Name="MyButton" Text="Click Me" Clicked="MyButton_Clicked"/>
+                <Label x:Name="MyLabel" Text="Welcome to Xamarin.Forms!"></Label>
             </StackLayout>
         </ScrollView>
     </Grid>
