--- a/sampleApp/sampleApp/Views/LoginPage.xaml
+++ b/sampleApp/sampleApp/Views/LoginPage.xaml
@@ -9,6 +9,7 @@
     <ContentPage.Content>
         <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
             <Button VerticalOptions="Center" Text="Login" Command="{Binding LoginCommand}"/>
+            <Button Text="Click Me" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
